feat(purchases): provide analysis component